Updated paths for publication etc in all configurations files

--- a/package.json
+++ b/package.json
@@ -31,26 +31,26 @@
     "type": "git",
     "url": "git://github.com/ramda/ramda.git"
   },
-  "module": "src/index.js",
-  "main": "cjs/index.js",
+  "module": "es/index.js",
+  "main": "src/index.js",
   "unpkg": "dist/ramda.min.js",
   "jsdelivr": "dist/ramda.min.js",
   "files": [
-    "cjs",
+    "es",
     "src",
     "dist"
   ],
   "scripts": {
     "bench": "scripts/benchRunner",
     "bookmarklet": "scripts/bookmarklet",
-    "build:cjs": "babel src --out-dir cjs",
-    "build:umd": "cross-env NODE_ENV=development rollup -c -i src/index.js -o dist/ramda.js",
-    "build:umd:min": "cross-env NODE_ENV=production rollup -c -i src/index.js -o dist/ramda.min.js",
+    "build:cjs": "babel es --out-dir src",
+    "build:umd": "cross-env NODE_ENV=development rollup -c -i es/index.js -o dist/ramda.js",
+    "build:umd:min": "cross-env NODE_ENV=production rollup -c -i es/index.js -o dist/ramda.min.js",
     "build": "npm run build:cjs && npm run build:umd && npm run build:umd:min",
     "clean": "rimraf cjs/* dist/* coverage/*",
     "coverage": "istanbul cover node_modules/.bin/_mocha -- --reporter spec",
     "postcoverage": "npm run posttest",
-    "lint": "eslint scripts/bookmarklet scripts/build src/*.js src/internal/*.js test/*.js test/**/*.js lib/sauce/*.js lib/bench/*.js",
+    "lint": "eslint scripts/bookmarklet scripts/build es/*.js es/internal/*.js test/*.js test/**/*.js lib/sauce/*.js lib/bench/*.js",
     "pretest": "npm run build:cjs",
     "test": "mocha --reporter spec",
     "posttest": "git checkout -- dist",
