--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,8 @@
-/cjs
+/src
 /lib/bench/report/
 /lib/docs/public/
 /node_modules/
 /npm-debug.log
-/ramda.js.tmp
 /lib/test/bundle.js
 /tmp
 /bower_components/
