--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,6 @@
 {
   "plugins": [
     "add-module-exports",
-    ["transform-es2015-modules-commonjs", {"loose": true, "noInterop": true, "strict": false}]
+    ["transform-es2015-modules-commonjs", {"loose": true, "strict": false}]
   ]
 }
