Transforming to cjs format with a custom plugin - heavily based on babel-plugin-transform-es2015-modules-commonjs

--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,5 @@
 {
   "plugins": [
-    "add-module-exports",
-    ["transform-es2015-modules-commonjs", {"loose": true, "strict": false}]
+    "./scripts/transform-es2015-modules-bare-cjs",
   ]
 }
