--- a/package.json
+++ b/package.json
@@ -60,7 +60,8 @@
   },
   "dependencies": {},
   "devDependencies": {
-    "babel-cli": "^6.24.1",
+    "babel-cli": "^6.26.0",
+    "babel-types": "^6.26.0",
     "benchmark": "~1.0.0",
     "browserify": "10.x.x",
     "cli-table": "0.3.x",
