--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "build:umd": "cross-env NODE_ENV=development rollup -c -i source/index.js -o dist/ramda.js",
     "build:umd:min": "cross-env NODE_ENV=production rollup -c -i source/index.js -o dist/ramda.min.js",
     "build": "npm run build:es && npm run build:cjs && npm run build:umd && npm run build:umd:min",
-    "clean": "rimraf es/* cjs/* dist/* coverage/*",
+    "clean": "rimraf es/* src/* dist/* coverage/*",
     "coverage": "istanbul cover node_modules/.bin/_mocha -- --reporter spec",
     "postcoverage": "npm run posttest",
     "lint": "eslint scripts/bookmarklet scripts/*.js source/*.js source/internal/*.js test/*.js test/**/*.js lib/sauce/*.js lib/bench/*.js",
