Wrapping constructor patterns into IIFEs with a babel plugin, so the single IIFE can be annotated as being pure

--- a/.babelrc
+++ b/.babelrc
@@ -3,12 +3,14 @@
     "cjs": {
       "plugins": [
         "./scripts/transform-esm-to-cjs",
-        "./scripts/annotate-pure-calls"
+        "./scripts/annotate-pure-calls",
+        "./scripts/wrap-constructor-pattern"
       ]
     },
     "es": {
       "plugins": [
-        "./scripts/annotate-pure-calls"
+        "./scripts/annotate-pure-calls",
+        "./scripts/wrap-constructor-pattern"
       ]
     }
   },
