Added "side-effects": false to the package.json which will be leveraged by future versions of webpack

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   ],
   "name": "ramda",
   "description": "A practical functional library for JavaScript programmers.",
+  "side-effects": false,
   "version": "0.24.1",
   "homepage": "http://ramdajs.com/",
   "license": "MIT",
