Use unpkg field instead
It appears unpkg.com will also look at the unpkg field, so using that would avoid potential bundler issues instead of using the browser field.

--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "url": "git://github.com/ramda/ramda.git"
   },
   "main": "index.js",
-  "browser": "dist/ramda.min.js",
+  "unpkg": "dist/ramda.min.js",
   "files": [
     "index.js",
     "src",
