--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   },
   "main": "index.js",
   "unpkg": "dist/ramda.min.js",
+  "jsdelivr": "dist/ramda.min.js",
   "files": [
     "index.js",
     "src",
