--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
   "dependencies": {},
   "devDependencies": {
     "babel-cli": "^6.26.0",
+    "babel-plugin-annotate-pure-calls": "^0.2.0",
     "babel-types": "^6.26.0",
     "benchmark": "~1.0.0",
     "browserify": "10.x.x",
