New script for partial builds

--- a/package.json
+++ b/package.json
@@ -46,9 +46,10 @@
     "bookmarklet": "scripts/bookmarklet",
     "build:es": "cross-env BABEL_ENV=es babel source --out-dir es",
     "build:cjs": "cross-env BABEL_ENV=cjs babel source --out-dir src",
-    "build:umd": "cross-env NODE_ENV=development rollup -c -i source/index.js -o dist/ramda.js",
-    "build:umd:min": "cross-env NODE_ENV=production rollup -c -i source/index.js -o dist/ramda.min.js",
+    "build:umd": "cross-env NODE_ENV=development rollup -c -o dist/ramda.js",
+    "build:umd:min": "cross-env NODE_ENV=production rollup -c -o dist/ramda.min.js",
     "build": "npm run build:es && npm run build:cjs && npm run build:umd && npm run build:umd:min",
+    "partial-build": "node ./scripts/partialBuild",
     "clean": "rimraf es/* src/* dist/* coverage/*",
     "coverage": "istanbul cover node_modules/.bin/_mocha -- --reporter spec",
     "postcoverage": "npm run posttest",
@@ -80,7 +81,7 @@
     "q": "^1.1.1",
     "ramda": "0.17.x",
     "rimraf": "~2.3.2",
-    "rollup": "^0.47.4",
+    "rollup": "^0.50.0",
     "rollup-plugin-uglify": "^2.0.1",
     "sanctuary": "0.7.x",
     "sinon": "^1.17.4",
