Add size snapshot rollup plugin
This diff adds size snapshot plugin for rollup which on every build
writes snapshot of umd with actual, minified and gzipped sizes. This
allows to track changes in size on every commit.

Also this diff combines development and production rollup configs in one
multiconfig to run node with rollup only once.

--- a/package.json
+++ b/package.json
@@ -46,8 +46,7 @@
     "bookmarklet": "scripts/bookmarklet",
     "build:es": "cross-env BABEL_ENV=es babel source --out-dir es",
     "build:cjs": "cross-env BABEL_ENV=cjs babel source --out-dir src",
-    "build:umd": "cross-env NODE_ENV=development rollup -c -o dist/ramda.js",
-    "build:umd:min": "cross-env NODE_ENV=production rollup -c -o dist/ramda.min.js",
+    "build:umd": "rollup -c",
     "build": "npm run build:es && npm run build:cjs && npm run build:umd && npm run build:umd:min",
     "partial-build": "node ./scripts/partialBuild",
     "clean": "rimraf es/* src/* dist/* coverage/*",
@@ -80,7 +79,8 @@
     "mocha": "2.x.x",
     "ramda": "0.17.x",
     "rimraf": "~2.3.2",
-    "rollup": "^0.50.0",
+    "rollup": "^0.57.1",
+    "rollup-plugin-size-snapshot": "^0.3.0",
     "rollup-plugin-uglify": "^2.0.1",
     "sanctuary": "0.7.x",
     "sinon": "^1.17.4",
