--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
   ],
   "sideEffects": false,
   "version": "0.25.0",
-  "homepage": "http://ramdajs.com/",
+  "homepage": "https://ramdajs.com/",
   "license": "MIT",
   "repository": {
     "type": "git",
