And js extrension to imports and named re-exports in es build

--- a/.babelrc
+++ b/.babelrc
@@ -10,6 +10,7 @@
     "es": {
       "plugins": [
         "annotate-pure-calls",
+        ["import-export-rename", {"^(.+?)(?:\\.m?js)?$": "$1.js"}],
         "./scripts/transpile/wrap-constructor-pattern"
       ]
     }
