--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "babel-cli": "^6.26.0",
     "babel-plugin-annotate-pure-calls": "^0.2.0",
     "babel-register": "^6.26.0",
+    "babel-plugin-import-export-rename": "^1.0.1",
     "babel-types": "^6.26.0",
     "babelify": "^8.0.0",
     "benchmark": "~1.0.0",
