--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "url": "git://github.com/ramda/ramda.git"
   },
   "module": "es/index.js",
-  "main": "src/index.js",
+  "main": "src/index",
   "unpkg": "dist/ramda.min.js",
   "jsdelivr": "dist/ramda.min.js",
   "files": [
