Use uglify instead of terser - this can act as smoke test against shipping es2015+ code

--- a/package.json
+++ b/package.json
@@ -93,8 +93,8 @@
     "mocha": "^5.2.0",
     "ramda": "0.17.x",
     "rimraf": "^2.6.2",
-    "rollup": "^0.50.0",
-    "rollup-plugin-terser": "^1.0.1",
+    "rollup": "^0.67.3",
+    "rollup-plugin-uglify": "^6.0.0",
     "sanctuary": "0.7.x",
     "sinon": "^1.17.4",
     "testem": "^2.9.0",
