Update Babel to v7

--- a/package.json
+++ b/package.json
@@ -59,7 +59,7 @@
     "bench": "node scripts/benchRunner",
     "bookmarklet": "node scripts/bookmarklet",
     "build:es": "cross-env BABEL_ENV=es babel source --out-dir es",
-    "build:cjs": "cross-env BABEL_ENV=cjs babel -q source --out-dir src",
+    "build:cjs": "cross-env BABEL_ENV=cjs babel source --out-dir src",
     "build:mjs": "cross-env BABEL_ENV=es babel source/index.js --out-file src/index.mjs",
     "build:umd": "cross-env NODE_ENV=development rollup -c -o dist/ramda.js",
     "build:umd:min": "cross-env NODE_ENV=production rollup -c -o dist/ramda.min.js",
@@ -70,16 +70,17 @@
     "coverage": "istanbul cover node_modules/.bin/_mocha -- --reporter spec",
     "lint": "eslint scripts/bookmarklet scripts/*.js source/*.js source/internal/*.js test/*.js test/**/*.js lib/sauce/*.js lib/bench/*.js",
     "browser_test": "testem ci",
-    "test": "cross-env BABEL_ENV=cjs mocha --require babel-register --reporter spec"
+    "test": "cross-env BABEL_ENV=cjs mocha --require @babel/register --reporter spec"
   },
   "dependencies": {},
   "devDependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-plugin-annotate-pure-calls": "^0.2.2",
+    "@babel/cli": "^7.4.4",
+    "@babel/core": "^7.4.4",
+    "@babel/types": "^7.4.4",
+    "@babel/register": "^7.4.4",
+    "babel-plugin-annotate-pure-calls": "^0.4.0",
     "babel-plugin-import-export-rename": "^1.0.1",
-    "babel-register": "^6.26.0",
-    "babel-types": "^6.26.0",
-    "babelify": "^8.0.0",
+    "babelify": "^10.0.0",
     "benchmark": "~1.0.0",
     "browserify": "https://api.github.com/repos/browserify/browserify/tarball/9ff7c55cc67a7ddbc64f8e7270bcd75fcc72ce2f",
     "cli-table": "0.3.x",
