--- a/package.json
+++ b/package.json
@@ -75,7 +75,7 @@
   "dependencies": {},
   "devDependencies": {
     "@babel/cli": "^7.4.4",
-    "@babel/core": "^7.4.4",
+    "@babel/core": "^7.4.5",
     "@babel/types": "^7.4.4",
     "@babel/register": "^7.4.4",
     "babel-plugin-annotate-pure-calls": "^0.4.0",
@@ -84,22 +84,22 @@
     "benchmark": "~1.0.0",
     "browserify": "https://api.github.com/repos/browserify/browserify/tarball/9ff7c55cc67a7ddbc64f8e7270bcd75fcc72ce2f",
     "cli-table": "0.3.x",
-    "cross-env": "^2.0.1",
+    "cross-env": "^5.2.0",
     "dox": "latest",
-    "envvar": "1.x.x",
-    "eslint": "^5.9.0",
-    "handlebars": ">=4.0.0",
+    "envvar": "^2.0.0",
+    "eslint": "^5.16.0",
+    "handlebars": ">=4.1.2",
     "istanbul": "^0.4.x",
-    "js-yaml": "^3.12.0",
-    "jsverify": "^0.7.3",
-    "mocha": "^5.2.0",
+    "js-yaml": "^3.13.1",
+    "jsverify": "^0.8.4",
+    "mocha": "^6.1.4",
     "ramda": "0.17.x",
-    "rimraf": "^2.6.2",
-    "rollup": "^0.67.3",
-    "rollup-plugin-uglify": "^6.0.0",
+    "rimraf": "^2.6.3",
+    "rollup": "^0.68.2",
+    "rollup-plugin-uglify": "^6.0.2",
     "sanctuary": "0.7.x",
-    "sinon": "^1.17.4",
-    "testem": "^2.9.0",
+    "sinon": "^7.3.2",
+    "testem": "^2.16.0",
     "xyz": "^3.0.0"
   }
 }
