--- a/package.json
+++ b/package.json
@@ -76,7 +76,7 @@
     "partial-build": "node ./scripts/partialBuild",
     "clean": "rimraf es/* src/* dist/* coverage/*",
     "prepare": "npm run clean && npm run build",
-    "coverage": "istanbul cover node_modules/.bin/_mocha -- --reporter spec",
+    "coverage": "BABEL_ENV=cjs nyc --reporter=lcov mocha -- --require @babel/register",
     "lint": "eslint scripts/bookmarklet scripts/*.js source/*.js source/internal/*.js test/*.js test/**/*.js lib/sauce/*.js lib/bench/*.js",
     "browser_test": "testem ci",
     "test": "cross-env BABEL_ENV=cjs mocha --require @babel/register --reporter spec"
@@ -99,10 +99,10 @@
     "envvar": "^2.0.0",
     "eslint": "^5.16.0",
     "handlebars": ">=4.1.2",
-    "istanbul": "^0.4.x",
     "js-yaml": "^3.13.1",
     "jsverify": "^0.8.4",
     "mocha": "^6.1.4",
+    "nyc": "^15.0.1",
     "rimraf": "^2.6.3",
     "rollup": "^0.68.2",
     "rollup-plugin-babel": "^4.3.3",
