--- a/package.json
+++ b/package.json
@@ -101,9 +101,9 @@
     "envvar": "^2.0.0",
     "eslint": "^5.16.0",
     "eslint-plugin-import": "^2.21.2",
+    "fast-check": "^2.0.0",
     "handlebars": ">=4.1.2",
     "js-yaml": "^3.13.1",
-    "jsverify": "^0.8.4",
     "mocha": "^6.1.4",
     "nyc": "^15.0.1",
     "rimraf": "^2.6.3",
