--- a/package.json
+++ b/package.json
@@ -79,7 +79,8 @@
     "coverage": "BABEL_ENV=cjs nyc --reporter=lcov mocha -- --require @babel/register",
     "lint": "eslint scripts/bookmarklet scripts/*.js source/*.js source/internal/*.js test/*.js test/**/*.js lib/sauce/*.js lib/bench/*.js",
     "browser_test": "testem ci",
-    "test": "cross-env BABEL_ENV=cjs mocha --require @babel/register --reporter spec"
+    "spec": "cross-env BABEL_ENV=cjs mocha --require @babel/register --reporter spec",
+    "test": "npm run spec && npm run lint"
   },
   "dependencies": {},
   "devDependencies": {
