chore: publicise funding options. close #3016

--- a/package.json
+++ b/package.json
@@ -45,6 +45,10 @@
     "type": "git",
     "url": "git://github.com/ramda/ramda.git"
   },
+  "funding": {
+    "type": "opencollective",
+    "url": "https://opencollective.com/ramda"
+  },
   "main": "./src/index.js",
   "exports": {
     ".": {
