--- a/package.json
+++ b/package.json
@@ -104,6 +104,7 @@
     "fast-check": "^2.12.0",
     "handlebars": ">=4.1.2",
     "js-yaml": "^3.13.1",
+    "jsverify": "^0.8.4",
     "mocha": "^6.1.4",
     "nyc": "^15.0.1",
     "rimraf": "^2.6.3",
