build: eslint: fix invalid regular expression flag

--- a/.eslintrc
+++ b/.eslintrc
@@ -127,5 +127,13 @@
       2,
       "always"
     ]
-  }
+  },
+  "overrides": [
+    {
+      "files": ["test/**/*.js"],
+      "parserOptions": {
+        "ecmaVersion": 2018
+      }
+    }
+  ]
 }
