--- a/.eslintrc
+++ b/.eslintrc
@@ -133,6 +133,13 @@
       "files": ["test/**/*.js"],
       "parserOptions": {
         "ecmaVersion": 2018
+      },
+      "rules": {
+        "no-restricted-properties": ["error", {
+          "object": "describe",
+          "property": "only"
+        }],
+        "no-restricted-modules": ["error", ".."]
       }
     }
   ]
