--- a/package.json
+++ b/package.json
@@ -102,6 +102,8 @@
     "@babel/register": "^7.4.4",
     "@babel/types": "^7.4.4",
     "@rollup/plugin-babel": "^5.0.4",
+    "@typescript-eslint/eslint-plugin": "^5.40.1",
+    "@typescript-eslint/parser": "^5.40.1",
     "babel-plugin-annotate-pure-calls": "^0.4.0",
     "babel-plugin-import-export-rename": "^1.0.1",
     "babelify": "^10.0.0",
@@ -126,6 +128,7 @@
     "sinon": "^7.3.2",
     "testem": "^2.16.0",
     "tsd": "^0.20.0",
+    "typescript": "^4.8.4",
     "xyz": "^3.0.0"
   }
 }
