--- a/package.json
+++ b/package.json
@@ -86,7 +86,7 @@
     "clean": "rimraf es/* src/* dist/* coverage/*",
     "prepare": "npm run clean && npm run build",
     "coverage": "BABEL_ENV=cjs nyc --reporter=lcov mocha -- --require @babel/register",
-    "lint": "eslint scripts/bookmarklet scripts/*.js source/*.js source/internal/*.js test/*.js test/**/*.js lib/sauce/*.js lib/bench/*.js",
+    "lint": "eslint --ext js,ts scripts/bookmarklet scripts/*.js source/*.js source/internal/*.js types/**/*.ts test/**/*.{js,ts} lib/sauce/*.js lib/bench/*.js",
     "browser_test": "testem ci",
     "spec": "cross-env BABEL_ENV=cjs mocha --require @babel/register --reporter spec",
     "test:types": "tsd",
@@ -102,8 +102,6 @@
     "@babel/register": "^7.4.4",
     "@babel/types": "^7.4.4",
     "@rollup/plugin-babel": "^5.0.4",
-    "@typescript-eslint/eslint-plugin": "^5.40.1",
-    "@typescript-eslint/parser": "^5.40.1",
     "babel-plugin-annotate-pure-calls": "^0.4.0",
     "babel-plugin-import-export-rename": "^1.0.1",
     "babelify": "^10.0.0",
@@ -128,7 +126,6 @@
     "sinon": "^7.3.2",
     "testem": "^2.16.0",
     "tsd": "^0.20.0",
-    "typescript": "^4.8.4",
     "xyz": "^3.0.0"
   }
 }
