--- a/package.json
+++ b/package.json
@@ -89,7 +89,6 @@
     "spec": "cross-env BABEL_ENV=cjs mocha --require @babel/register --reporter spec",
     "test": "npm-run-all --parallel spec lint"
   },
-  "dependencies": {},
   "devDependencies": {
     "@babel/cli": "^7.4.4",
     "@babel/core": "^7.4.5",
@@ -118,6 +117,8 @@
     "rollup": "^1.32.1",
     "rollup-plugin-uglify": "^6.0.4",
     "sanctuary": "0.7.x",
+    "sanctuary-identity": "^2.1.0",
+    "sanctuary3": "npm:sanctuary@^3.1.0",
     "sinon": "^7.3.2",
     "testem": "^2.16.0",
     "xyz": "^3.0.0"
