replaced all ES6 syntax introduced in a previous commit, restored package.json

--- a/package.json
+++ b/package.json
@@ -89,6 +89,7 @@
     "spec": "cross-env BABEL_ENV=cjs mocha --require @babel/register --reporter spec",
     "test": "npm-run-all --parallel spec lint"
   },
+  "dependencies": {},
   "devDependencies": {
     "@babel/cli": "^7.4.4",
     "@babel/core": "^7.4.5",
