Make traverse and sequence Fantasy-Land compliant (#3360)
* change the sequence and traverse implementations to operate on FantasyLand-standard applicatives

--- a/package.json
+++ b/package.json
@@ -118,6 +118,8 @@
     "rollup": "^1.32.1",
     "rollup-plugin-uglify": "^6.0.4",
     "sanctuary": "0.7.x",
+    "sanctuary-identity": "^2.1.0",
+    "sanctuary3": "npm:sanctuary@^3.1.0",
     "sinon": "^7.3.2",
     "testem": "^2.16.0",
     "xyz": "^3.0.0"
