--- a/package.json
+++ b/package.json
@@ -117,9 +117,8 @@
     "rimraf": "^5.0.5",
     "rollup": "^1.32.1",
     "rollup-plugin-uglify": "^6.0.4",
-    "sanctuary": "^0.7.x",
+    "sanctuary": "^3.1.0",
     "sanctuary-identity": "^2.1.0",
-    "sanctuary3": "npm:sanctuary@^3.1.0",
     "sinon": "^7.3.2",
     "testem": "^3.10.1",
     "xyz": "^4.0.0"
