--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,6 +1,8 @@
 name: Build
 
-on: [pull_request]
+on:
+  pull_request_target:
+    types: [edited, opened, synchronize, reopened]
 
 jobs:
   coverage:
