--- a/package.json
+++ b/package.json
@@ -83,7 +83,8 @@
     "partial-build": "node ./scripts/partialBuild",
     "clean": "rimraf es/* src/* dist/* coverage/*",
     "prepare": "npm run clean && npm run build",
-    "coverage": "BABEL_ENV=cjs nyc --reporter=text-summary --reporter=text mocha -- --reporter=min --require @babel/register",
+    "coverage:summary": "BABEL_ENV=cjs nyc --reporter=text-summary mocha -- --reporter=min --require @babel/register",
+    "coverage:details": "BABEL_ENV=cjs nyc --reporter=text mocha -- --reporter=min --require @babel/register",
     "lint": "eslint scripts/bookmarklet scripts/*.js source/*.js source/internal/*.js test/*.js test/**/*.js lib/sauce/*.js lib/bench/*.js",
     "browser_test": "testem ci",
     "spec": "cross-env BABEL_ENV=cjs mocha --require @babel/register --reporter spec",
