--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -49,22 +49,22 @@ jobs:
           echo "$COVERAGE_DETAILS_OUTPUT"
 
       - name: Find Comment
-        uses: peter-evans/find-comment@v2
+        uses: peter-evans/find-comment@v3
         id: find-comment
         continue-on-error: true
         with:
           issue-number: ${{ github.event.pull_request.number }}
           comment-author: 'github-actions[bot]'
-          body-includes: Coverage Results
+          body-includes: Coverage Summary
 
       - name: Create or update comment
-        uses: peter-evans/create-or-update-comment@v3
+        uses: peter-evans/create-or-update-comment@v4
         with:
           comment-id: ${{ steps.find-comment.outputs.comment-id }}
           issue-number: ${{ github.event.pull_request.number }}
           body: |
             <details>
-              <summary>Coverage</summary>
+              <summary>Coverage Summary</summary>
 
               ```bash
               ${{ steps.coverage-summary.outputs.COVERAGE_SUMMARY_OUTPUT }}
